Починил авторизацию и регистрацию

--- a/Diplom/Client/Pages/Authentication/Login.razor
+++ b/Diplom/Client/Pages/Authentication/Login.razor
@@ -33,7 +33,7 @@
 
 
 @code {
-    private LoginRequest user = new();
+    private LoginRequestDto user = new();
 
     private async void HandleLogin()
     {
