--- a/Diplom/Client/Pages/Authentication/Register.razor
+++ b/Diplom/Client/Pages/Authentication/Register.razor
@@ -46,7 +46,7 @@
 
 
 @code {
-    private RegisterRequest user = new();
+    private RegisterRequestDto user = new();
 
 
     private async void HandleRegister()
