--- a/Diplom/Client/_Imports.razor
+++ b/Diplom/Client/_Imports.razor
@@ -11,6 +11,6 @@
 @using Diplom.Client.Infrastructure
 @using Diplom.Client.Infrastructure.Authentication
 @using Diplom.Client.Infrastructure.Managers.AuthenticationManager
-@using Diplom.Application.Models
-@using Diplom.Application.Models.Requests
+@using Diplom.API.Dto.Requests
+@using Diplom.API.Dto.Responses
 @using Microsoft.AspNetCore.Components.Authorization
