--- a/Diplom/Client/Shared/MainLayout.razor
+++ b/Diplom/Client/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@using Blazored.Toast.Configuration
 @inherits LayoutComponentBase
-
+<MudThemeProvider/>
 @*<div class="page">
     <div class="sidebar">
         <MyNavMenu />
@@ -22,7 +22,7 @@
   
        @* <CustomNavMenu />*@
         <HtmlCssNavMenu/>
-        <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
+       
     
         <div class="content px-4">
             @Body
