--- a/Diplom/Client/_Imports.razor
+++ b/Diplom/Client/_Imports.razor
@@ -17,3 +17,5 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Blazored.Toast
 @using Blazored.Toast.Services
+@using MudBlazor
+@using Microsoft.AspNetCore.Authorization
