--- a/Diplom/Client/Shared/Product/ProductCard.razor
+++ b/Diplom/Client/Shared/Product/ProductCard.razor
@@ -2,7 +2,7 @@
 
 <a href="/ProductDetails/@Product.Id">
     <div class="card">
-        <img class="img-thumbnail" src="https://ae04.alicdn.com/kf/HTB16FT1RpXXXXbWXVXXq6xXFXXXH/-.jpg">
+        <img class="img-thumbnail" src="https://avatarko.ru/img/kartinka/33/multfilm_lyagushka_32117.jpg">
         <div class="card-body">
             <h5 class="card-title mb-3">
                 @Product.Name
