--- a/Diplom/Client/Shared/MainLayout.razor
+++ b/Diplom/Client/Shared/MainLayout.razor
@@ -1,27 +1,11 @@
 ﻿@using Blazored.Toast.Configuration
+@using Diplom.Client.Shared.NavMenu
 @inherits LayoutComponentBase
 <MudThemeProvider/>
-@*<div class="page">
-    <div class="sidebar">
-        <MyNavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-*@
 
 <div class="container">
-  
-       @* <CustomNavMenu />*@
         <HtmlCssNavMenu/>
+       @* <NavMenu/>*@
        
     
         <div class="content px-4">
