--- a/Diplom/Client/Pages/ProductPages/ProductDetails.razor
+++ b/Diplom/Client/Pages/ProductPages/ProductDetails.razor
@@ -4,31 +4,31 @@
 @inject IProductManager ProductManager
 @inject IToastService ToastService
 
-<h3 class="mb-5">Product Details</h3>
+
 <div class="row container">
     <div class="col-md-6 ">
         <div class="img-container">
-            <img class="img-fluid" src="https://avatarko.ru/img/kartinka/33/multfilm_lyagushka_32117.jpg">
+            <img class="img-fluid" src="@Product.ImgUrl">
         </div>
-        
+
     </div>
     <div class="col-md-6 right-container">
         <div class="row">
-            <h3>@Product.Name</h3>
+            <h3 class="ml-3">@Product.Name</h3>
             <p class="mb-4">@Product.Description</p>
-            <p class="mb-4">
-                <b>
-                    @Product.Price$
-                </b>
-            </p>
+
         </div>
         <div class="row">
-            <div class="">
-                <button class="btn btn-outline-dark"
-                        @onclick="() => AddToCart_Click()">
-                    <b>Add to Cart</b>
-                </button>
-            </div>
+            <p class="mb-4">
+                <b>
+                    Цена: @Product.Price₽
+                </b>
+            </p>
+            <button class="btn btn-outline-dark"
+                    @onclick="() => AddToCart_Click()">
+                <b>Add to Cart</b>
+            </button>
+
         </div>
 
     </div>
