--- a/Diplom/Client/Shared/MainLayout.razor
+++ b/Diplom/Client/Shared/MainLayout.razor
@@ -11,12 +11,14 @@
         @Body
     </div>
 
-    <BlazoredToasts Position="ToastPosition.BottomRight"
-                    Timeout="4"
+    <BlazoredToasts Position="ToastPosition.BottomLeft"
+                    Timeout="2"
                     IconType="IconType.FontAwesome"
                     SuccessClass="success-toast-override"
                     SuccessIcon="fa fa-thumbs-up"
                     ErrorIcon="fa fa-bug" />
+
+   
 
 </div>
 
