--- a/Diplom/Client/_Imports.razor
+++ b/Diplom/Client/_Imports.razor
@@ -12,10 +12,14 @@
 @using Diplom.Client.Infrastructure.Authentication
 @using Diplom.Client.Infrastructure.Managers.AuthenticationManager
 @using Diplom.Client.Infrastructure.Erros
+@using Diplom.Client.Infrastructure.Services.Cart
+@using Diplom.Client.Infrastructure.Services.Authentication
 @using Diplom.API.Dto.Requests
 @using Diplom.API.Dto.Responses
 @using Microsoft.AspNetCore.Components.Authorization
 @using Blazored.Toast
 @using Blazored.Toast.Services
+@using Blazored.Modal
+@using Blazored.Modal.Services
 @using MudBlazor
 @using Microsoft.AspNetCore.Authorization
