--- a/Diplom/Client/Shared/HtmlCssNavMenu.razor
+++ b/Diplom/Client/Shared/HtmlCssNavMenu.razor
@@ -11,7 +11,7 @@
             </li>
             <li class="nav-item" style="float:right">
                 <NavLink class="nav-link" @onclick="Logout">
-                    <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
+                    <span class="oi oi-account-logout" aria-hidden="true"></span> Выйти
                 </NavLink>
             </li>
             <li class="nav-item" style="float:right">
@@ -24,12 +24,12 @@
         <NotAuthorized>
             <li class="nav-item" style="float:right">
                 <NavLink class="nav-link" href="/login" Match="NavLinkMatch.All">
-                    <span class="oi oi-people" aria-hidden="true"></span> Login
+                    <span class="oi oi-people" aria-hidden="true"></span> Авторизироваться
                 </NavLink>
             </li>
             <li class="nav-item" style="float:right">
                 <NavLink class="nav-link" href="/register" Match="NavLinkMatch.All">
-                    <span class="oi oi-people" aria-hidden="true"></span> Register
+                    <span class="oi oi-people" aria-hidden="true"></span> Зарегистрироваться
                 </NavLink>
             </li>
         </NotAuthorized>
