--- a/Diplom/Client/_Imports.razor
+++ b/Diplom/Client/_Imports.razor
@@ -11,11 +11,15 @@
 @using Diplom.Client.Infrastructure
 @using Diplom.Client.Infrastructure.Authentication
 @using Diplom.Client.Infrastructure.Managers.AuthenticationManager
+@using Diplom.Client.Infrastructure.Managers.CategoryManager
+@using Diplom.Client.Infrastructure.Managers.OrderManager
+@using Diplom.Client.Infrastructure.Managers.ProductManager
 @using Diplom.Client.Infrastructure.Erros
 @using Diplom.Client.Infrastructure.Services.Cart
 @using Diplom.Client.Infrastructure.Services.Authentication
 @using Diplom.API.Dto.Requests
 @using Diplom.API.Dto.Responses
+@using Diplom.API.Dto.Dtos
 @using Microsoft.AspNetCore.Components.Authorization
 @using Blazored.Toast
 @using Blazored.Toast.Services
