--- a/Diplom/Client/Pages/CartPages/CartItem.razor
+++ b/Diplom/Client/Pages/CartPages/CartItem.razor
@@ -1,5 +1,5 @@
-﻿@using Diplom.API.Dto.Dtos
-@inject ICartService CartService
+﻿@inject ICartService CartService
+
 <div class="item-card row">
     <div class="col-md-6 img-card">
         <img class="" src="@Item.Product.ImgUrl">
