--- a/Diplom/Client/Pages/CartPages/CartItem.razor.css
+++ b/Diplom/Client/Pages/CartPages/CartItem.razor.css
@@ -1,5 +1,6 @@
 ﻿.item-card {
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border: solid 2px;
     border-radius: 10px;
     border-color: grey;
