--- a/Diplom/Client/Pages/ProductPages/ProductDetails.razor
+++ b/Diplom/Client/Pages/ProductPages/ProductDetails.razor
@@ -1,9 +1,6 @@
 ﻿@page "/ProductDetails/{Id:guid}"
-@using Blazored.LocalStorage
-@using Diplom.API.Dto.Dtos
-@using Diplom.Client.Infrastructure.Managers.ProductManager
-@using Diplom.Client.Infrastructure.Services.Cart
 @attribute [Authorize]
+
 @inject IProductManager ProductManager
 @inject IToastService ToastService
 @inject ICartService CartService
@@ -13,13 +10,11 @@
         <div class="img-container">
             <img class="img-fluid" src="@Product.ImgUrl">
         </div>
-
     </div>
     <div class="col-md-6 right-container">
         <div class="row">
             <h3 class="ml-3">@Product.Name</h3>
             <p class="mb-4">@Product.Description</p>
-
         </div>
         <div class="row">
             <p class="mb-4">
@@ -29,20 +24,17 @@
             </p>
             <button class="btn btn-outline-dark"
                     @onclick="async() => await AddToCart_Click()">
-                <b>Add to Cart</b>
+                <b>Добавить в корзину</b>
             </button>
-
         </div>
-
     </div>
-
 </div>
 
 @code {
     [Parameter]
     public Guid Id { get; set; }
 
-    public ProductResponseDto Product { get; set; } = new();
+    private ProductResponseDto Product { get; set; } = new();
 
     protected async override Task OnInitializedAsync()
     {
@@ -56,7 +48,6 @@
                 Product = Product,
                 Quantity = 1
             });
-
         ToastService.ShowInfo($"Добавлено в корзину: {Product.Name}", "Корзина");
     }
 }
