--- a/Diplom/Client/Shared/Error.razor
+++ b/Diplom/Client/Shared/Error.razor
@@ -12,10 +12,10 @@
      }
      else
     {
-        <div style="background-color: yellow; border: 2px dashed black; white-space: pre; font-family: consolas, monospace;">
+        <div class="container">
             @foreach (var exception in receivedExceptions)
             {
-                <div class="received-exception" style="background-color: rgba(255,255,255,0.3); margin: 0.5rem; padding: 0.5rem;">
+                <div class="received-exception exception-message">
                     @exception.Message
                 </div>
             }
