--- a/Diplom/Client/Pages/ProductPages/Components/ProductList.razor
+++ b/Diplom/Client/Pages/ProductPages/Components/ProductList.razor
@@ -1,7 +1,7 @@
 ﻿@inject IProductManager ProductManager
 @inject IOrderManager OrderManager
 
-<div style="display:flex; flex-flow:row wrap;">
+<div class="product-list">
     @foreach (var product in Products)
     {
         <ProductCard Product=@product>
