--- a/Diplom/Client/Shared/MainLayout.razor
+++ b/Diplom/Client/Shared/MainLayout.razor
@@ -1,12 +1,7 @@
-﻿@using Blazored.Toast.Configuration
-@using Diplom.Client.Shared.NavMenu
-@inherits LayoutComponentBase
-
+﻿@inherits LayoutComponentBase
 
 <div class="container">
-
     <HtmlCssNavMenu />
-
     <div class="content px-1">
         @Body
     </div>
@@ -17,8 +12,5 @@
                     SuccessClass="success-toast-override"
                     SuccessIcon="fa fa-thumbs-up"
                     ErrorIcon="fa fa-bug" />
-
-   
-
 </div>
 
