--- a/Diplom/Client/_Imports.razor
+++ b/Diplom/Client/_Imports.razor
@@ -7,7 +7,13 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Diplom.Client
+@using Diplom.Client.Pages.ProductPages
+@using Diplom.Client.Pages.ProductPages.Components
+@using Diplom.Client.Pages.OrderPages
+@using Diplom.Client.Pages.OrderPages.Modals
+@using Diplom.Client.Pages.CartPages.Components
 @using Diplom.Client.Shared
+@using Diplom.Client.Shared.NavMenu
 @using Diplom.Client.Infrastructure
 @using Diplom.Client.Infrastructure.Authentication
 @using Diplom.Client.Infrastructure.Managers.AuthenticationManager
@@ -23,6 +29,7 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Blazored.Toast
 @using Blazored.Toast.Services
+@using Blazored.Toast.Configuration
 @using Blazored.Modal
 @using Blazored.Modal.Services
 @using MudBlazor
