--- a/Diplom/Client/Pages/OrderPages/Modals/OrderModal.razor
+++ b/Diplom/Client/Pages/OrderPages/Modals/OrderModal.razor
@@ -10,6 +10,9 @@
    
 
 @code {
+    [CascadingParameter] 
+    BlazoredModalInstance ModalInstance { get; set; }
+
     [Parameter]
     public List<CartDto> CartItems{ get; set; }
 
