--- a/Diplom/Client/Shared/MainLayout.razor
+++ b/Diplom/Client/Shared/MainLayout.razor
@@ -12,5 +12,10 @@
                     SuccessClass="success-toast-override"
                     SuccessIcon="fa fa-thumbs-up"
                     ErrorIcon="fa fa-bug" />
+
+    <RadzenDialog />
+    <RadzenNotification />
+    <RadzenContextMenu />
+    <RadzenTooltip />
 </div>
 
